--- a/src/styles.css
+++ b/src/styles.css
@@ -1,49 +1,26 @@
 body {
-  margin: 0;
+	margin: 0;
 }
 
 #content {
-  position: relative;
-  min-height: 100vh;
-  min-width: 100vh;
+	position: relative;
+	min-height: 100vh;
+	min-width: 100vh;
+}
+
+#winner {
+	text-align: center;
 }
 
 #wheel {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  -webkit-transform: translate(-50%, -50%);
-  
-  height: 90vh;
-  width: 90vh;
-  /*background-color: red;*/
-  /*min-height: 100vh;*/
-}
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	-webkit-transform: translate(-50%, -50%);
 
-#center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  -webkit-transform: translate(-50%, -50%);
+	height: 90vh;
+	width: 90vh;
 
-  height: 10vh;
-  width: 10vh;
-  background-color: black;
-  border-radius: 5vh;
-
-  z-index: 1;
-}
-
-.bar {
-  position: absolute;
-  top: 50%;
-  left: 5%;
-  -webkit-transform: translate(0, -50%);
-
-  height: 1vh;
-  width: 45%;
-
-  -webkit-transform-origin: right;
+	text-align: center;
 }
