--- a/src/styles.css
+++ b/src/styles.css
@@ -12,15 +12,15 @@ body {
 	text-align: center;
 }
 
-#wheel {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-right: -50%;
-	-webkit-transform: translate(-50%, -50%);
+#wheelContainer {
+	margin-left: auto;
+	margin-right: auto;
 
 	height: 90vh;
 	width: 90vh;
+}
 
-	text-align: center;
+#wheel {
+	height: 90vh;
+	width: 90vh;
 }
